<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.FriendActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_picture"
                android:minHeight="300dp"
                android:id="@+id/activity_friend_profile_picture" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Name Here"
                android:textSize="24sp"
                android:id="@+id/activity_friend_user_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <ImageView
                        android:id="@+id/nickname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/nickname" />

                    <TextView
                        android:id="@+id/activity_friend_nickname"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="3"
                        android:text="@string/nickname"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />

                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/emoji" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="3"
                        android:text="@string/emoji"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />

                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/rating_icons" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="3"
                        android:text="@string/rating_icons"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />

                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/i_am_feeling_set" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="3"
                        android:text="@string/i_am_feeling_set"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />

                </TableRow>

            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_photos" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/shared_food_photos">

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
